# fastapi-travel-tax

./: README.md  pyproject.toml
app/: main.py
app/core/: config.py  deps.py  security.py
app/models/: __init__.py  province.py  user_model.py
app/routers/: __init__.py  authentication_router.py  province_router.py  user_router.py
app/schemas/: user_schema.py
tests/: test_province.py  test_user.py
